fix mobile tables, spacing, full screens

--- a/app/assets/styles/core/_tables.scss
+++ b/app/assets/styles/core/_tables.scss
@@ -12,6 +12,11 @@
     padding: $global-spacing;
     vertical-align: top;
     text-align: left;
+    @include media(small-down) {
+      &:nth-child(n + 4) {
+        visibility: hidden;
+      }
+    }
     ul {
       list-style: none;
       margin: 0;
